[package]
name = "protoss"
version = "0.1.0"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptr_meta = "0.1"
rkyv = { version = "0.4", optional = true }

[features]
default = ["std"]
std = []
